# update-sensei

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: numpy.yaml  pandas.yaml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: modules.rst.txt
examples/: new_reqs.txt  numpy_example.py  old_reqs.txt  pandas_example.py
scraping/release_notes_scraper/: scrapy.cfg
scraping/release_notes_scraper/release_notes_scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraping/release_notes_scraper/release_notes_scraper/spiders/: numpy_spider.py  pandas_spider.py  scipy_spider.py
src/update_sensei/: main.py
src/update_sensei/analyzers/: base_analyzer.py  numpy_analyzer.py  pandas_analyzer.py
src/update_sensei/data_management/: deprecation_data_loader.py
src/update_sensei/deprecation_detector/: changelog_parser.py  deprecation_finder.py
src/update_sensei/file_parser/: python_file_parser.py  requirements_parser.py
src/update_sensei/utils/: config.py
